# POO

./: README.md
marketplace/src/basket/: CMakeLists.txt  basket.cc  basket.h  basket_main.cc
marketplace/src/client/: CMakeLists.txt  client.h  client_main.cc
marketplace/src/computer/: CMakeLists.txt  computer.cc  computer.h  computer_main.cc
marketplace/src/market/: market.cc  market.h
marketplace/src/person/: person.cc  person.h  person_main.cc
marketplace/src/product/: product.cc  product.h  product_main.cc
marketplace/src/seller/: CMakeLists.txt  seller.cc  seller.h  seller_main.cc
marketplace/src/tv/: CMakeLists.txt  tv.cc  tv.h  tv_main.cc
marketplace/tests/: CMakeLists.txt  basket_test.cc  basket_test2.cc
p1/ej1/: hello-world.cc  helloworld
p1/ej2/: ns  ns.cc
p1/ej3/: guess.cc  prueba
p2/: person.cc  person.h  person_main  person_main.cc
